updated project copy

--- a/src/_projects/_defaults.html
+++ b/src/_projects/_defaults.html
@@ -1,9 +1,10 @@
 ---
 layout: project
-title:
+completion_date:
+title: 
+label: Enter something funny and witty here...
 client:
 status: active
-completion_date:
 summary:
 description:
   situation_html:
