--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -3,42 +3,14 @@ layout: project
 title: Learn to Ride
 client: Burton
 status: active
-pullquote:
-summary:
+pullquote: "Burton reached out to us with the intention of restructuring, renaming, and rebranding their Experience Snowboarding Program."
+summary: "Burton reached out to us with the intention of restructuring, renaming, and rebranding their Experience Snowboarding Program."
 description:
   situation_html: >-
-    <p>Burton has been a staple in the snowboard industry since the late 70s,
-    specializing in snowboards, bindings, boots, and outerwear. Learn to Ride
-    &mdash; formerly Experience Snowboarding &mdash; is a program initiated by
-    Burton in partnership with various resorts all over the world to provide
-    comprehensive learning experiences for riders of every age and ability. From
-    toddlers to first-timers, retirees to park rats, Learn to Ride is a fun,
-    empowering and exciting breadth of opportunities that allow riders, shops
-    and resorts to take their snowboard experience to the next
-    level.</p><p>Burton reached out to us with the intention of restructuring,
-    renaming, and rebranding their Experience Snowboarding Program.</p>
+    <p>Burton has been a staple in the snowboard industry since the late 70s, specializing in snowboards, bindings, boots, and outerwear. Learn to Ride — formerly Experience Snowboarding — is a program initiated by Burton in partnership with various resorts all over the world to provide comprehensive learning experiences for riders of every age and ability. From toddlers to first-timers, retirees to park rats, Learn to Ride is a fun, empowering and exciting breadth of opportunities that allow riders, shops and resorts to take their snowboard experience to the next level.</p>
   solution_html: >-
-    <p>Working intimately with the team at Burton, Ocupop was able to distill
-    the expansive Experience Snowboardingecosystem down to a foundation of
-    Burton Learn to Ride programs, product, and places, all focused on learning
-    to ride. That is, whether you&rsquo;re first strapping in or you&rsquo;re
-    adding a second or third cork to your spins, you can always learn to ride
-    better &ndash; and Burton Learn To Ride programs, products, and places are
-    available at every step of the way. Examples of products are boards, boots,
-    bindings, helmets, etc., programs might be instructor courses, teen and
-    women camps, product demos, and resort rental offerings; places include
-    toddler Riglet parts, Burton Learn To Ride beginner to advanced terrain
-    parks, branded natural terrain, and beyond. Additionally, for each of these
-    elements there exists a broad audience from beginner to expert riders and it
-    is vital that &lsquo;learn&rsquo; does not imply just rudimentary levels of
-    advancement, but covers improvement at all levels of riding. To this end, we
-    established the augmented brand of Burton Learn To Ride+ for higher level
-    programs, products, and places.</p><p>With this clearly defined taxonomy in
-    place, our team moved ahead to create a visual identity that represented the
-    initiative and its mission to reach and instruct current and future
-    snowboarders all over the world. The identity had to visually convey
-    instruction, levels of skill, and snowboarding in general while being
-    globally and universally recognizable.</p>
+    <p>Working intimately with the team at Burton, Ocupop was able to distill the expansive Experience Snowboarding ecosystem down to a foundation of Burton Learn to Ride programs, product, and places, all focused on learning to ride. That is, whether you’re first strapping in or you’re adding a second or third cork to your spins, you can always learn to ride better – and Burton Learn To Ride programs, products, and places are available at every step of the way. Examples of products are boards, boots, bindings, helmets, etc., programs might be instructor courses, teen and women camps, product demos, and resort rental offerings; places include toddler Riglet parts, Burton Learn To Ride beginner to advanced terrain parks, branded natural terrain, and beyond. Additionally, for each of these elements there exists a broad audience from beginner to expert riders and it is vital that ‘learn’ does not imply just rudimentary levels of advancement, but covers improvement at all levels of riding. To this end, we established the augmented brand of Burton Learn To Ride+ for higher level programs, products, and places.</p>
+    <p>With this clearly defined taxonomy in place, our team moved ahead to create a visual identity that represented the initiative and its mission to reach and instruct current and future snowboarders all over the world. The identity had to visually convey instruction, levels of skill, and snowboarding in general while being globally and universally recognizable.</p>
   results_html:
 completion_date: 2013-08-01 00:00:00
 gallery:
