--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -1,26 +1,19 @@
 ---
 layout: project
-title: Mapbox Locate
+completion_date: 2018-05-30 00:00:00
+title: Mapbox Locate Event
+label: Exploring the Edges
 client: Mapbox
 status: active
-pullquote:
+pullquote: "Mapbox needed a new message strategy and branding to make a lasting impact, and better reflect their company and cutting edge developer products."
 summary:
 description:
   situation_html: >-
-    <p>Mapbox is an open source mapping platform that sought out Ocupop to help
-    establish themselves as a world class tech company with branding and event
-    design for their inaugural conference at Pier 27 in San Francisco. Equipped
-    with a name and preliminary branding, Mapbox was looking for repositioning
-    of their brand to reflect the bold and cutting edge developer products and
-    culture that they are pushing out into the world.</p>
+    <p>Mapbox is the open source location data platform for mobile and web applications that provides building blocks to add location features like maps, search, and navigation into any experience a user creates.</p>
+    <p>Mapbox recently asked us to help them amplify their standing as a world class technology leader at their inaugural conference at Pier 27 in San Francisco. With a name already established, Mapbox needed an new message strategy and branding to make a lasting impact, and better reflect their company and cutting edge developer products.</p>
   solution_html: >-
-    <p>We created a new identity system that focused on presenting Mapbox an
-    emerging light on the map location scene. We strategized marketing campaigns
-    and explored the edges of design with an interactive billboard, immersive
-    stage animations, and a sophisticated, futuristic aesthetic to signage and
-    digital assets.&nbsp;</p>
+    <p>Working on a tight timeline we designed a new identity system that showcases Mapbox as an emerging light among map providers. We strategized and realized marketing campaigns for the event that explored the edges of design via interactive billboards, immersive stage animations, and futuristic signage.</p>
   results_html:
-completion_date: 2018-05-30 00:00:00
 gallery:
   - image:
     caption:
