homepage layout and styles, global elements

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 
-<div class="hero">
+<section>
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -22,7 +22,7 @@ title: Home
       </div>
     </div>
   </div>
-</div>
+</section>
 <section>
   <div class="container">
     <div class="row">
