Updated 'src/_projects/google-developer-days.html' via CloudCannon

--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -3,8 +3,14 @@ layout: project
 title: Google Developer Days
 client: Google
 status: active
-pullquote:
-summary:
+pullquote: >-
+  Google asked Ocupop to design a cohesive brand that celebrates the idea of
+  building a better web together, and could be applied across three distinct
+  locations.
+summary: >-
+  Google asked Ocupop to design a cohesive brand that celebrates the idea of
+  building a better web together, and could be applied across three distinct
+  locations.
 description:
   situation_html: >-
     <p>Google Developer Days is a multi-location web developer conference which
