Updated 'src/_projects/burton-learn-to-ride.html' via CloudCannon

--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -3,8 +3,12 @@ layout: project
 title: Learn to Ride
 client: Burton
 status: active
-pullquote:
-summary:
+pullquote: >-
+  Burton reached out to us with the intention of restructuring, renaming, and
+  rebranding their Experience Snowboarding Program.
+summary: >-
+  Burton reached out to us with the intention of restructuring, renaming, and
+  rebranding their Experience Snowboarding Program.
 description:
   situation_html: >-
     <p>Burton has been a staple in the snowboard industry since the late 70s,
@@ -53,3 +57,4 @@ tags:
   - branding
   - web
 ---
+
