Updated 'src/_projects/bittercube.html' via CloudCannon

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -1,10 +1,16 @@
 ---
 layout: project
-title: 
+title:
 client: Bittercube Bitters
 status: active
-pullquote:
-summary:
+pullquote: >-
+  Bittercube sought out Ocupop to help elevate their brand perception to a level
+  which matches the quality and sophistication of not only their products, but
+  philosophy and company culture as well.
+summary: >-
+  Bittercube sought out Ocupop to help elevate their brand perception to a level
+  which matches the quality and sophistication of not only their products, but
+  philosophy and company culture as well.
 description:
   situation_html: >-
     <p>Bittercube Bitters slow crafts bitters using all natural ingredients, and
