Updated 'src/_projects/first-inspires.html' via CloudCannon

--- a/src/_projects/first-inspires.html
+++ b/src/_projects/first-inspires.html
@@ -1,10 +1,14 @@
 ---
 layout: project
-title: 
+title:
 client: FIRST Inspires
 status: draft
-pullquote:
-summary:
+pullquote: >-
+  For 2019 Ocupop proposed developing a cohesive theme that would work across
+  all four competitions—something that hadn’t been done in previous years.
+summary: >-
+  For 2019 Ocupop proposed developing a cohesive theme that would work across
+  all four competitions—something that hadn’t been done in previous years.
 description:
   situation_html: >-
     <p>The FIRST Inspires program creates competitions and events (both locally
@@ -32,3 +36,4 @@ tags:
   - illustration
   - events
 ---
+
