Updated 'src/_projects/mapbox-locate.html' via CloudCannon

--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -3,8 +3,8 @@ layout: project
 title: Mapbox Locate
 client: Mapbox
 status: active
-pullquote:
-summary:
+pullquote: "Mapbox needed a new message strategy and \tbranding to make a lasting impact, and better reflect \ttheir company and cutting edge developer products."
+summary: "Mapbox needed a new message strategy and \tbranding to make a lasting impact, and better reflect \ttheir company and cutting edge developer products."
 description:
   situation_html: >-
     <p>Mapbox is an open source mapping platform that sought out Ocupop to help
@@ -34,3 +34,4 @@ tags:
   - branding
   - events
 ---
+
