--- a/src/work.html
+++ b/src/work.html
@@ -2,42 +2,53 @@
 layout: page
 title: Work
 permalink: /work/
+testimonial:
+  quote: I get complimented on our website and materials constantly. In fact, I always joke that if Ocupop hadn’t done such a great job with our design I wouldn’t be so busy all the time!
+  author: Alyssa Fox
+  title: Founder, Fox Tax Service
 ---
 
 <section id="projects">
   <div class="container">
+
     <div class="row">
       <div class="col-12">
-        <div class="mb-5 editable lead">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, deleniti beatae deserunt mollitia obcaecati sunt ab id necessitatibus tempore vitae perspiciatis eius facilis vero illo expedita soluta unde voluptas. Ullam.</p>
+        <p class="lead editable">Here's your chance to find out everything you ever wanted to know about Ocupop...get all your questions answered while more than doubling your recommended daily allowance of interweb vitamin-V (voyeryism). Like a myspace page that won't melt your eyeballs.</p>
+        <div class="editable">
+          <p>Everyone and their ideated, synergistic brother keeps throwing the B-word around, and though we are certainly NOT an ad agency or a marketing firm, it is starting to make us a little crazy. A Brand is not a logo, it is not something you make in the computer, it is a cohesive corporate experience; a holistic collaboration of colors, logos, commercials, benefits packages and CEO hairpieces. From the employees to the customers, a brand is, at its best, a distinct, cohesive, and resonant voice.</p>
+          <p>So while we are not a dyed-in-the-wool branding agency, we routinely find ourselves in a position to offer valuable strategy and direction for clients of all varieties. From message strategy and positioning for start-ups and mom and pops, to audits, protocol, and implementation for established corporations, Ocupop has the acumen and experience to foster responsible brand stewardship far and wide.</p>
         </div>
       </div>
     </div>
 
     <div class="row">
       <div class="col-12">
-        <div class="mb-5 editable">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit fuga sit sequi vitae nobis quo impedit, soluta ea commodi nihil reprehenderit, explicabo, hic dignissimos repellendus suscipit ducimus itaque! Culpa, modi?</p>
-        </div>
+        <hr>
+        <ul class="nav justify-content-center d-none">
+          <li class="nav-item">
+            <a class="nav-link active" data-filter="all" href="#">all</a>
+          </li>
+          {% for focus in site.focuses %}
+          <li class="nav-item">
+            <a class="nav-link" data-filter=".{{ focus.title | downcase }}" href="#">{{ focus.title | downcase }}</a>
+          </li>
+          {% endfor %}
+        </ul>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-12">
-        <button type="button" data-filter="all">All</button>
-        {% for focus in site.focuses %}
-          <button type="button" data-filter=".{{ focus.title | downcase }}">{{ focus.title | downcase }}</button>
-        {% endfor %}
-      </div>
-    </div>
     <div id="projectList" class="row">
       {% for project in site.projects %}
-        <div class="mix col-xs-12 col-lg-6 {% for tag in project.tags %} {{ tag }}{% endfor %}">
-          <img src="{{ project.gallery[0].image | default: site.placeholders.aspect-4x3 }}" class="img-fluid" alt="{{ project.title }}">
-          <h2><a href="{{ project.url }}" title="{{ project.title }}">{{ project.title }}</a></h2>
-          <p>{% for tag in project.tags %}{{ tag  | capitalize }}{% unless forloop.last %}, {% endunless %}{% endfor %}</p>
-        </div>
+        {% if project.status == "active" %}
+          <div class="mix col-xs-12 col-lg-6 mb-5 {% for tag in project.tags %} {{ tag }}{% endfor %}">
+            <img src="{{ project.gallery[0].image | default: site.placeholders.aspect-4x3 }}" class="img-fluid" alt="{{ project.title }}">
+            <h2 class="mt-4">{{ project.title }}</h2>
+            <p>{{ project.summary }}</p>
+            <a href="{{ project.url }}" class="btn btn-inline">Learn more...</a>
+          </div>
+        {% endif %}
       {% endfor %}
     </div>
+
   </div>
 </section>
