--- a/src/about.html
+++ b/src/about.html
@@ -8,10 +8,36 @@ title: Us
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <h1>Culture</h1>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum eos enim optio provident, nostrum nisi nobis! Earum eos, perferendis nisi tenetur adipisci magni labore harum.</p>
-          <h2>Philosophy</h2>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et veniam neque libero, laborum quis aliquid quasi numquam at praesentium porro recusandae autem! Animi, unde deserunt?</p>
+          <p class="lead">We’re in this game to make our clients’ brands perform and we will fight and scrap and claw and beg until we’re satisfied that the result is nothing short of exemplary.</p>
+          <p>So, if you are looking for switchboards, hold music, synergy, ideation, and enough buzz-words to fill a conference room, we’re probably not the ONE. But, if you love what you do and are proud of your company, your product and your employees, chances are we might fit right in. We thrive on relationships of mutual respect, commitment and enjoyment – WITH our clients, our collaborators and each other; we’re all in this together right?</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="row no-gutters">
+  <div class="col-md-6">
+    <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+  </div>
+  <div class="col-md-6">
+    <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+  </div>
+</div>
+<section class="bg-dark text-white">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="content">
+          <h1>Fuck No</h1>
+          <p>Ocupop  ghts the good fight, battling a sneaky culture of amateurism that too often poisons design and design relationships. We leverage the power of design thinking and take our role as a trusted expert VERY seriously. We work directly and openly with our clients, carefully sharing our process, researching and defending every decision, and earning and maintaining trust while we blow their fucking minds.</p>
+          <a href="#">Listen to Michael's 'How to say Fuck No and still have them love you! SXSW Talk</a>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="content">
+          <h1>Shit Yea</h1>
+          <p>‘Nothing comes from no.’ Though we aren’t afraid to say no when the circumstances demand it, we are equally passionate about charging ahead when an opening presents itself and building the experience and expertise vital to unleashing the full power of saying no...and yes. This energy and optimizism is core to how we’ve managed to design some of the most influential logos, campaigns, and user interfaces on the web over the last twenty years.</p>
+          <a href="#">Listen to Michael's 'Screw Fuck No, Say Shit Yeah! SXSW Talk</a>
         </div>
       </div>
     </div>
@@ -20,22 +46,42 @@ title: Us
 <section>
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col-md-6">
         <div class="content">
-          <img src="{{ site.placeholder.hero }}" class="img-fluid" alt="">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      {% for i in (1..8) %}
-      <div class="col-md-4">
-        <div class="content">
-          <div class="bg-image aspect-1x1 bg-light" style="background-image: url(https://via.placeholder.com/768x768?text=Team+Photos+Videos)">
-
+          <div class="bg-image aspect-4x3" style="background-image: url({{ site.placeholders.aspect-4x3 }})">
           </div>
+          <h2>Michael Nieling</h2>
+          <h3>Founder, Creative Director</h3>
+          <dl>
+            <dt>Title you prefer</dt>
+            <dd>M</dd>
+            <dt>Spirit Animal</dt>
+            <dd>Wolf</dd>
+            <dt>What you want to be when you grow up</dt>
+            <dd>Robotron</dd>
+            <dt>Catch Phrase</dt>
+            <dd>I'm going to punch you in the throat</dd>
+          </dl>
         </div>
       </div>
-      {% endfor %}
+      <div class="col-md-6">
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url({{ site.placeholders.aspect-4x3 }})">
+          </div>
+          <h2>Michael Nieling</h2>
+          <h3>Founder, Creative Director</h3>
+          <dl>
+            <dt>Title you prefer</dt>
+            <dd>M</dd>
+            <dt>Spirit Animal</dt>
+            <dd>Wolf</dd>
+            <dt>What you want to be when you grow up</dt>
+            <dd>Robotron</dd>
+            <dt>Catch Phrase</dt>
+            <dd>I'm going to punch you in the throat</dd>
+          </dl>
+        </div>
+      </div>
     </div>
   </div>
 </section>
