--- a/src/_focuses/events.html
+++ b/src/_focuses/events.html
@@ -3,5 +3,5 @@ layout: focus
 title: Events
 summary_html: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
 featured_image:
-project:
+projects:
 ---
