--- a/src/_focuses/presentation.html
+++ b/src/_focuses/presentation.html
@@ -3,5 +3,5 @@ layout: focus
 title: Presentation
 summary_html: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
 featured_image:
-project:
+projects:
 ---
