Add Michaels copy edits to projects

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -1,35 +1,14 @@
 ---
 layout: project
-title:
+title: We all got LOGO TATTOOS! 
 client: Bittercube Bitters
 status: active
-pullquote: >-
-  Bittercube sought out Ocupop to help elevate their brand perception to a level
-  which matches the quality and sophistication of not only their products, but
-  philosophy and company culture as well.
-summary: >-
-  Bittercube sought out Ocupop to help elevate their brand perception to a level
-  which matches the quality and sophistication of not only their products, but
-  philosophy and company culture as well.
+pullquote: Bittercube needed to elevate their brand to match the quality and sophistication of their products, philosophy, and team. And once they saw the new logo, every one of ‘em had a new tattoo!
+summary: Bittercube needed to elevate their brand to match the quality and sophistication of their products, philosophy, and team. And once they saw the new logo, every one of ‘em had a new tattoo!
 description:
-  situation_html: >-
-    <p>Bittercube Bitters slow crafts bitters using all natural ingredients, and
-    no extracts of any kind. Based in both MKE, WI and MPLS, MN, Bittercube has
-    been in the craft cocktail industry since 2009.&nbsp;</p>
-  solution_html: >-
-    <p>Bittercube sought out Ocupop to help elevate their brand perception to a
-    level which matches the quality and sophistication of not only their
-    products, but philosophy and company culture as well.</p><p>As we began
-    digging into the redesign, we started our explorations with seeing if there
-    was a way to simply take the existing elements of their mark (a dropper and
-    cube of salt) and reimagine them using different forms/geometry and
-    composition. This led to our ultimate decision to extract the strongest
-    elements of their original logo &mdash; the dropper and the bitters &mdash;
-    and create a new way for this to be communicated. With Bittercube&rsquo;s
-    passion for true craftsmanship and commitment to producing their bitters by
-    hand, with care, we saw an opportunity to apply the same ideas to their
-    rebrand. We created a custom wordmark/logotype and custom, hand drawn
-    illustrations for each product offering.</p>
+  situation_html: <p>Bittercube Bitters slow crafts bitters using all natural ingredients, and no extracts of any kind. Hailing from Milwaukee and Minneapolis, Bittercube has been in the craft cocktail industry since 2009. </p>
+  solution_html: <p>Early in the research and brand strategy phase of this project, we decided that it would be ideal to maintain the individual elements of the existing ID if at all possible. The dropper and cube of bitters nearly phonetically spelled out the brand name and always kept the hand-crafted feel front and center. With Bittercube’s passion for true craftsmanship and commitment to producing their bitters by hand, with care, we saw an opportunity to apply the same ideas to their rebrand. We created a custom wordmark/logotype and bespoke, hand drawn illustrations for each product offering.</p>
+  <p>Some of the boys proudly sharing their new ink. #Bittercube4lyfe!</p>
   results_html:
 completion_date:
 gallery:
