--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -1,30 +1,14 @@
 ---
 layout: project
-title: Google Developer Days
+title: Europe, India, China: Developers for days...
 client: Google
 status: active
-pullquote: >-
-  Google asked Ocupop to design a cohesive brand that celebrates the idea of
-  building a better web together, and could be applied across three distinct
-  locations.
-summary: >-
-  Google asked Ocupop to design a cohesive brand that celebrates the idea of
-  building a better web together, and could be applied across three distinct
-  locations.
+pullquote: A unique challenge: build a brand that resonates across three disparate cultures AND make sure each shares their own authentic slant on building a better web together.
+summary: A unique challenge: build a brand that resonates across three disparate cultures AND make sure each shares their own authentic slant on building a better web together.
 description:
-  situation_html: >-
-    <p>Google Developer Days is a multi-location web developer conference which
-    showcases the&nbsp; newest developer technologies from the top minds at
-    Google and hosts developers from across the globe to be inspired by exciting
-    technical talks and hands-on learning experiences. They approached Ocupop to
-    design a cohesive brand that could be applied to 3 distinct locations and
-    celebrates the idea of building a better web together.</p>
-  solution_html: >-
-    <p>Inspired by building blocks, Ocupop designed a identity system that had
-    extensibility to be applied to the diversity in countries where this event
-    is taking place. This was achieved through bringing a creative and vibrant
-    design to marketing, stage and environmental design, signage, digital
-    assets, animation, and swag items.&nbsp;</p>
+  situation_html: <p>Google Developer Days is a multi-location web developer conference showcasing the latest and greatest in web tech and developer tools from the geniuses at Google. Three epic events hosted thousands of entrepreneurs, disruptors, and developers from across the globe. Two to three days of exciting inside info, technical talks, and hands-on learning were carefully curated in Krakow, Bangalore, and Beijing. From the identity design to every pillow and drink ticket, every detail was carefully designed by Ocupop.</p>
+  solution_html: <p>Inspired by simple building blocks, Ocupop designed an extensible aesthetic that reinforces collaborative development and celebrates the diversity of the host countries. Sweeping IMAX-sized animations, King Kong scale selfie frames, stage-side villages, and branded beverages all combined to create a vibrant, energizing experience for attendees and Googlers alike.</p>
+  <p>Tom lost his moustache in India. If found, please contact us today.</p>
   results_html:
 completion_date:
 gallery:
@@ -37,8 +21,7 @@ videos:
 tags:
   - animation
   - events
-  - branding
-  - illustration
-  - web
+  - design
+
 ---
 
