--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -1,26 +1,13 @@
 ---
 layout: project
-title: FIRST Launch
-client: FIRST Inspires
+title: Reaching for the stars
+client: FIRST LAUNCH
 status: active
-pullquote:
-summary:
+pullquote: For 2019 Ocupop proposed developing a cohesive theme that would work across all four competitions—something that hadn’t been done in previous years. 
+summary: For 2019 Ocupop proposed developing a cohesive theme that would work across all four competitions—something that hadn’t been done in previous years.
 description:
-  situation_html: >-
-    <p>FIRST Inspires aims to get children ages 6-18 involved in STEM and STEM
-    related fields. Each year FIRST holds a themed tournament comprising of four
-    different competitions children participate in. Each competition presents
-    the children with a new challenge that requires teamwork, communication, and
-    STEM principles to complete. Oh and robots too.</p>
-  solution_html: >-
-    <p>FIRST came to Ocupop looking for a cohesive brand identity for their 2019
-    competition that felt professional while appealing to kids. Under the
-    overarching brand, all four competitions also need identities that were tied
-    to the theme but distinctly different. Teaser animations and illustrations
-    were developed to spark interest alongside an overarching website explaining
-    and informing this years theme and challenges. Clothing items and posters
-    were also developed for participants to show their pride alongside other
-    various swag items</p>
+  situation_html: <p>FIRST is on a mission to get children ages 6-18 involved in STEM and STEM related fields. Every year FIRST holds a tournament comprising of four different competitions. Each competition presents a new challenge that requires teamwork, communication and STEM principles. Oh, and robots, too.</p>
+  solution_html: <p>All four competitions would need identities that were distinctly different from one another but be tied to the overarching theme. Teaser animations, illustrations and digital marketing assets were developed to spark interest alongside a website introducing the theme and challenges. Apparel and promotional materials were also designed for participants to show their FIRST ‘Stem Squad’ pride.</p>
   results_html:
 completion_date: 2019-01-01 00:00:00
 gallery:
