about template, contact template

--- a/src/about.html
+++ b/src/about.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Us
+title: About
 ---
 
 <section class="bg-light">
@@ -28,14 +28,14 @@ title: Us
     <div class="row">
       <div class="col-md-6">
         <div class="content">
-          <h1>Fuck No</h1>
+          <h2>Fuck No</h2>
           <p>Ocupop  ghts the good fight, battling a sneaky culture of amateurism that too often poisons design and design relationships. We leverage the power of design thinking and take our role as a trusted expert VERY seriously. We work directly and openly with our clients, carefully sharing our process, researching and defending every decision, and earning and maintaining trust while we blow their fucking minds.</p>
           <a href="#">Listen to Michael's 'How to say Fuck No and still have them love you! SXSW Talk</a>
         </div>
       </div>
       <div class="col-md-6">
         <div class="content">
-          <h1>Shit Yea</h1>
+          <h2>Shit Yea</h2>
           <p>‘Nothing comes from no.’ Though we aren’t afraid to say no when the circumstances demand it, we are equally passionate about charging ahead when an opening presents itself and building the experience and expertise vital to unleashing the full power of saying no...and yes. This energy and optimizism is core to how we’ve managed to design some of the most influential logos, campaigns, and user interfaces on the web over the last twenty years.</p>
           <a href="#">Listen to Michael's 'Screw Fuck No, Say Shit Yeah! SXSW Talk</a>
         </div>
@@ -51,9 +51,9 @@ title: Us
         <div class="content">
           <div class="bg-image aspect-4x3" style="background-image: url({{ site.placeholders.aspect-4x3 }})">
           </div>
-          <h2>Michael Nieling</h2>
-          <h3>Founder, Creative Director</h3>
-          <dl>
+          <h3 class="mt-3">Michael Nieling</h3>
+          <h4>Founder, Creative Director</h4>
+          <dl class="mt-4">
             <dt>Title you prefer</dt>
             <dd>M</dd>
             <dt>Spirit Animal</dt>
