--- a/src/contact.html
+++ b/src/contact.html
@@ -7,27 +7,43 @@ title: Contact
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <h1>What it's like to work with us</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim fuga iste saepe incidunt dicta quae rerum praesentium, impedit minima suscipit quibusdam sint quos ipsa perspiciatis?</p>
-          <h1>What it's like to work for us</h1>
+          <p class="lead">What is Ocupop? We’re not entirely sure honestly... Are we Creatives? Graphic designers? Web designers? Maybe web developers? Commercial artists? Trend-spotters? Branding experts? Fashionistas? Computer nerds – Definitely.</p>
+          <p>We are, simply speaking, a small shop, with all of the benefits and pit-falls therein. You see what you get; no account executives, no receptionists, no bagels or coffee. The coolest Ocupop Office Funzone® around and the best people in the world.</p>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <img src="{{ site.placeholders.hero }}" class="img-fluid" alt="">
+          <img src="" class="img-fluid" alt="">
         </div>
       </div>
     </div>
   </div>
 </section>
-<section class="bg-light">
+<section class="bg-image aspect-16x9" style="background-image: url({{ site.placeholders.hero }})"></section>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="content">
+          <h1>What is it like to work with us?</h1>
+          <p>We are, simply speaking, a small shop, with all of the benefits and pit-falls therein. You see what you get; no account executives, no receptionists, no bagels or coffee. The coolest <strong>Ocupop Office Funzone®</strong> around and the best people in the world.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="bg-dark text-white">
   <div class="container">
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <h1>Contact</h1>
+          <h1>Send us a Heyder</h1>
+          <p>Ocupop is perpetually pushing the limits of technology, testing and tweaking at the leading edge of what’s possible in a browser. This Joke Station 3000 Webform® feeds an artifically intelligent system painstakingly adapted over time to identify only the most hillarious funnies. See if you can make our robot laugh— he love puns.</p>
+        </div>
+      <div class="col-12">
+        <div class="content">    
           <div class="cognito">
             <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>
             <script>Cognito.load("forms", { id: "25" });</script>
