update focus and focus instances

--- a/src/_focuses/branding.html
+++ b/src/_focuses/branding.html
@@ -1,7 +1,17 @@
 ---
 layout: focus
-title: Branding
-summary_html: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+title: Brand Strategy
+label: Message Strategy, Positioning, Planning
+summary_html: >-
+  <p class="lead editable">Here's your chance to find out everything you ever wanted to know about Ocupop...get all your questions answered while more than doubling your recommended daily allowance of interweb vitamin-V (voyeryism). Like a myspace page that won't melt your eyeballs.</p>
+  <div class="editable mt-5">
+    <p>Everyone and their ideated, synergistic brother keeps throwing the B-word around, and though we are certainly NOT an ad agency or a marketing firm, it is starting to make us a little crazy. A Brand is not a logo, it is not something you make in the computer, it is a cohesive corporate experience; a holistic collaboration of colors, logos, commercials, benefits packages and CEO hairpieces. From the employees to the customers, a brand is, at its best, a distinct, cohesive, and resonant voice.</p>
+    <p>So while we are not a dyed-in-the-wool branding agency, we routinely find ourselves in a position to offer valuable strategy and direction for clients of all varieties. From message strategy and positioning for start-ups and mom and pops, to audits, protocol, and implementation for established corporations, Ocupop has the acumen and experience to foster responsible brand stewardship far and wide.</p>
+  </div>
+testimonial:
+  quote: I get complimented on our website and materials constantly. In fact, I always joke that if Ocupop hadn’t done such a great job with our design I wouldn’t be so busy all the time!
+  author: Alyssa Fox
+  title: Founder, Fox Tax Service
 featured_image:
 projects:
 ---
