--- a/src/_focuses/_defaults.html
+++ b/src/_focuses/_defaults.html
@@ -1,7 +1,12 @@
 ---
 layout: focus
 title: 
+label:
 summary_html:
 featured_image:
+testimonial:
+  quote: 
+  author: 
+  title: 
 projects:
 ---
