Error control on projects

--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -3,7 +3,7 @@ layout: project
 completion_date: 2018-05-30 00:00:00
 title: Like SXSW, only with way more maps!
 label: Like SXSW, only with way more maps!
-client: Mapbox: Locate
+client: 'Mapbox: Locate'
 status: active
 pullquote: "Mapbox needed a new message strategy and branding to make a lasting impact, and better reflect their company and cutting edge developer products."
 summary: "Mapbox needed a new message strategy and branding to make a lasting impact, and better reflect their company and cutting edge developer products."
