Edited default and top 7 project collections

--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -3,19 +3,10 @@ layout: project
 title: Reaching for the stars
 client: FIRST LAUNCH
 status: active
-pullquote: For 2019 Ocupop proposed developing a cohesive theme that would work across all four competitions—something that hadn’t been done in previous years. 
-summary: For 2019 Ocupop proposed developing a cohesive theme that would work across all four competitions—something that hadn’t been done in previous years.
-description:
-  situation_html: <p>FIRST is on a mission to get children ages 6-18 involved in STEM and STEM related fields. Every year FIRST holds a tournament comprising of four different competitions. Each competition presents a new challenge that requires teamwork, communication and STEM principles. Oh, and robots, too.</p>
-  solution_html: <p>All four competitions would need identities that were distinctly different from one another but be tied to the overarching theme. Teaser animations, illustrations and digital marketing assets were developed to spark interest alongside a website introducing the theme and challenges. Apparel and promotional materials were also designed for participants to show their FIRST ‘Stem Squad’ pride.</p>
-  results_html:
+summary: 'For 2019 Ocupop proposed developing a cohesive theme that would work across all four competitions—something that hadn’t been done in previous years.'
 completion_date: 2019-01-01 00:00:00
 gallery:
   - image:
-    caption:
-videos:
-  - title:
-    url:
     caption:
 tags:
   - animation
@@ -24,3 +15,15 @@ tags:
   - strategy
   - web
 ---
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <p>FIRST is on a mission to get children ages 6-18 involved in STEM and STEM related fields. Every year FIRST holds a tournament comprising of four different competitions. Each competition presents a new challenge that requires teamwork, communication and STEM principles. Oh, and robots, too.</p>
+          <p>All four competitions would need identities that were distinctly different from one another but be tied to the overarching theme. Teaser animations, illustrations and digital marketing assets were developed to spark interest alongside a website introducing the theme and challenges. Apparel and promotional materials were also designed for participants to show their FIRST ‘Stem Squad’ pride.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
