--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -3,25 +3,27 @@ layout: project
 title: 'Europe, India, China: Developers for days...'
 client: Google
 status: active
-pullquote: 'A unique challenge: build a brand that resonates across three disparate cultures AND make sure each shares their own authentic slant on building a better web together.'
 summary: 'A unique challenge: build a brand that resonates across three disparate cultures AND make sure each shares their own authentic slant on building a better web together.'
-description:
-  situation_html: '<p>Google Developer Days is a multi-location web developer conference showcasing the latest and greatest in web tech and developer tools from the geniuses at Google. Three epic events hosted thousands of entrepreneurs, disruptors, and developers from across the globe. Two to three days of exciting inside info, technical talks, and hands-on learning were carefully curated in Krakow, Bangalore, and Beijing. From the identity design to every pillow and drink ticket, every detail was carefully designed by Ocupop.</p>'
-  solution_html: '<p>Inspired by simple building blocks, Ocupop designed an extensible aesthetic that reinforces collaborative development and celebrates the diversity of the host countries. Sweeping IMAX-sized animations, King Kong scale selfie frames, stage-side villages, and branded beverages all combined to create a vibrant, energizing experience for attendees and Googlers alike.</p>
-  <p>Tom lost his moustache in India. If found, please contact us today.</p>'
-  results_html:
 completion_date:
 gallery:
   - image:
-    caption:
-videos:
-  - title:
-    url:
     caption:
 tags:
   - animation
   - events
   - design
-
 ---
 
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <p>Google Developer Days is a multi-location web developer conference showcasing the latest and greatest in web tech and developer tools from the geniuses at Google. Three epic events hosted thousands of entrepreneurs, disruptors, and developers from across the globe. Two to three days of exciting inside info, technical talks, and hands-on learning were carefully curated in Krakow, Bangalore, and Beijing. From the identity design to every pillow and drink ticket, every detail was carefully designed by Ocupop.</p>
+          <p>Inspired by simple building blocks, Ocupop designed an extensible aesthetic that reinforces collaborative development and celebrates the diversity of the host countries. Sweeping IMAX-sized animations, King Kong scale selfie frames, stage-side villages, and branded beverages all combined to create a vibrant, energizing experience for attendees and Googlers alike.</p>
+          <p>Tom lost his moustache in India. If found, please contact us today.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
