--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -3,20 +3,10 @@ layout: project
 title: Take your beef to the beach!
 client: Kunoa Cattle Company
 status: active
-pullquote: Passionately supporting Kunoa’s dedication to a sustainable future for Hawaii, Ocupop named the brand, designed the identity, and has served as agency of record since day one.
-summary: Passionately supporting Kunoa’s dedication to a sustainable future for Hawaii, Ocupop named the brand, designed the identity, and has served as agency of record since day one.
-description:
-  situation_html: <p>98% of the beef consumed in Hawaii is imported. Kunoa is changing that. Hawaii’s only vertically integrated cattle company is ushering in a future where food is locally raised with integrity and care. A future where produce and protein is abundant, fresh, and healthy. A future where Hawaii can stand proud and free, flush with local food as rich as the islands themselves.</p>
-  solution_html: '<p>The brand aesthetic has been expanded from business cards and pitch decks to ranch uniforms, beef tongue recipes, and countless product packaging and in-store designs. Iconic and brimming with Aloha, Kunoa is thriving in da ‘aina and beyond!</p>
-  <p>Kunoa in Hawaiian roughly translates as ‘Stand Free,’ celebrating their core mission of bringing healthy, local food to the people of Hawaii and bolster an Ag industry that not only turns profits for today, but positions the Ag industry for a long, sustainable tomorrow. Because, after all, our food is our future!</p>'
-  results_html:
+summary: 'Passionately supporting Kunoa’s dedication to a sustainable future for Hawaii, Ocupop named the brand, designed the identity, and has served as agency of record since day one.'
 completion_date: 2014-08-20 00:00:00
 gallery:
   - image:
-    caption:
-videos:
-  - title:
-    url:
     caption:
 tags:
   - branding
@@ -24,3 +14,16 @@ tags:
   - illustration
 ---
 
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <p>98% of the beef consumed in Hawaii is imported. Kunoa is changing that. Hawaii’s only vertically integrated cattle company is ushering in a future where food is locally raised with integrity and care. A future where produce and protein is abundant, fresh, and healthy. A future where Hawaii can stand proud and free, flush with local food as rich as the islands themselves.</p>
+          <p>The brand aesthetic has been expanded from business cards and pitch decks to ranch uniforms, beef tongue recipes, and countless product packaging and in-store designs. Iconic and brimming with Aloha, Kunoa is thriving in da ‘aina and beyond!</p>
+          <p>Kunoa in Hawaiian roughly translates as ‘Stand Free,’ celebrating their core mission of bringing healthy, local food to the people of Hawaii and bolster an Ag industry that not only turns profits for today, but positions the Ag industry for a long, sustainable tomorrow. Because, after all, our food is our future!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
