--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -3,13 +3,7 @@ layout: project
 title: We all got LOGO TATTOOS! 
 client: Bittercube Bitters
 status: active
-pullquote: Bittercube needed to elevate their brand to match the quality and sophistication of their products, philosophy, and team. And once they saw the new logo, every one of ‘em had a new tattoo!
-summary: Bittercube needed to elevate their brand to match the quality and sophistication of their products, philosophy, and team. And once they saw the new logo, every one of ‘em had a new tattoo!
-description:
-  situation_html: <p>Bittercube Bitters slow crafts bitters using all natural ingredients, and no extracts of any kind. Hailing from Milwaukee and Minneapolis, Bittercube has been in the craft cocktail industry since 2009. </p>
-  solution_html: '<p>Early in the research and brand strategy phase of this project, we decided that it would be ideal to maintain the individual elements of the existing ID if at all possible. The dropper and cube of bitters nearly phonetically spelled out the brand name and always kept the hand-crafted feel front and center. With Bittercube’s passion for true craftsmanship and commitment to producing their bitters by hand, with care, we saw an opportunity to apply the same ideas to their rebrand. We created a custom wordmark/logotype and bespoke, hand drawn illustrations for each product offering.</p>
-  <p>Some of the boys proudly sharing their new ink. #Bittercube4lyfe!</p>'
-  results_html:
+summary: 'Bittercube needed to elevate their brand to match the quality and sophistication of their products, philosophy, and team. And once they saw the new logo, every one of ‘em had a new tattoo!'
 completion_date:
 gallery:
   - image:
@@ -24,3 +18,16 @@ tags:
   - illustration
 ---
 
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <p>Bittercube Bitters slow crafts bitters using all natural ingredients, and no extracts of any kind. Hailing from Milwaukee and Minneapolis, Bittercube has been in the craft cocktail industry since 2009.</p>
+          <p>Early in the research and brand strategy phase of this project, we decided that it would be ideal to maintain the individual elements of the existing ID if at all possible. The dropper and cube of bitters nearly phonetically spelled out the brand name and always kept the hand-crafted feel front and center. With Bittercube’s passion for true craftsmanship and commitment to producing their bitters by hand, with care, we saw an opportunity to apply the same ideas to their rebrand. We created a custom wordmark/logotype and bespoke, hand drawn illustrations for each product offering.</p>
+          <p>Some of the boys proudly sharing their new ink. #Bittercube4lyfe!</p>
+        </div> 
+      </div>
+    </div>
+  </div>
+</section>
