--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -3,30 +3,30 @@ layout: project
 title: Learn to ride? More like learn to rip.
 client: Burton Snowboards
 status: active
-pullquote: Experience Snowboarding’ was a confusing galaxy of products and initiatives. With a ethereal aesthetic and an even more mysterious structure, the whole thing needed to get more down to earth.
-summary: Experience Snowboarding’ was a confusing galaxy of products and initiatives. With a ethereal aesthetic and an even more mysterious structure, the whole thing needed to get more down to earth. 
-description:
-  situation_html: >-
-    <p>Standing sideways since 1977, Burton IS snowboarding in many ways. Learn to Ride — formerly Experience Snowboarding — is a program initiated by Burton in partnership with various resorts all over the world to provide comprehensive learning experiences for riders of every age and ability. From toddlers to first-timers, retirees to park rats, Learn to Ride is a fun, empowering, and exciting program that allow riders, shops and resorts to take their snowboard experience to the next level.</p>
-  solution_html: >-
-    <p>Working intimately with the team at Burton, Ocupop was able to distill the expansive Experience Snowboarding ecosystem down to a foundation of Burton Learn to Ride (1) programs, (2) product, and (3) places. All focused on learning to ride—that is, whether you’re strapping in for the first time or adding a second or third cork to your spins, you can always learn to ride better, and Burton Learn To Ride programs, products, and places are available at every step of the way.</p>
-    <p>Products: Everything from learning-focused boards, boots, and bindings to helmets, kids gear, and industry-chaning step-on bindings.</p>
-    <p>Programs: Rider-designed instructor courses, teen camps, women’s camps, the industry’s best product demos and resort rental offerings.</p>
-    <p>Places: Toddler-sized Riglet parts, Burton Learn To Ride beginner to advanced terrain parks, branded natural terrain, and beyond. </p>
-    <p>Learn to Ride isn’t just kids and beginners— every element of the initiative (and the brand) is designed to encourage and enable improvement at all levels of riding. To this end, Ocupop also established the augmented brand of Burton Learn To Ride+ for more advanced programs, products, and places.</p>
-    <p>Which run will you take? No matter whether it’s the chutes and steeps or the bunny hill— Learn to Ride is down to take some laps. (maybe this has a big image of the logo with the three ‘hills’) </p>
-  results_html:
+summary: 'Experience Snowboarding’ was a confusing galaxy of products and initiatives. With a ethereal aesthetic and an even more mysterious structure, the whole thing needed to get more down to earth.'
 completion_date: 2013-08-01 00:00:00
 gallery:
   - image:
-    caption:
-videos:
-  - title:
-    url:
     caption:
 tags:
   - strategy
   - branding
   - web
 ---
-
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <p>Standing sideways since 1977, Burton IS snowboarding in many ways. Learn to Ride — formerly Experience Snowboarding — is a program initiated by Burton in partnership with various resorts all over the world to provide comprehensive learning experiences for riders of every age and ability. From toddlers to first-timers, retirees to park rats, Learn to Ride is a fun, empowering, and exciting program that allow riders, shops and resorts to take their snowboard experience to the next level.</p>
+          <p>Working intimately with the team at Burton, Ocupop was able to distill the expansive Experience Snowboarding ecosystem down to a foundation of Burton Learn to Ride (1) programs, (2) product, and (3) places. All focused on learning to ride—that is, whether you’re strapping in for the first time or adding a second or third cork to your spins, you can always learn to ride better, and Burton Learn To Ride programs, products, and places are available at every step of the way.</p>
+          <p>Products: Everything from learning-focused boards, boots, and bindings to helmets, kids gear, and industry-chaning step-on bindings.</p>
+          <p>Programs: Rider-designed instructor courses, teen camps, women’s camps, the industry’s best product demos and resort rental offerings.</p>
+          <p>Places: Toddler-sized Riglet parts, Burton Learn To Ride beginner to advanced terrain parks, branded natural terrain, and beyond. </p>
+          <p>Learn to Ride isn’t just kids and beginners— every element of the initiative (and the brand) is designed to encourage and enable improvement at all levels of riding. To this end, Ocupop also established the augmented brand of Burton Learn To Ride+ for more advanced programs, products, and places.</p>
+          <p>Which run will you take? No matter whether it’s the chutes and steeps or the bunny hill— Learn to Ride is down to take some laps. (maybe this has a big image of the logo with the three ‘hills’) </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
