--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -2,22 +2,11 @@
 layout: project
 completion_date: 2018-05-30 00:00:00
 title: Like SXSW, only with way more maps!
-label: Like SXSW, only with way more maps!
 client: 'Mapbox: Locate'
 status: active
-pullquote: "Mapbox needed a new message strategy and branding to make a lasting impact, and better reflect their company and cutting edge developer products."
-summary: "Mapbox needed a new message strategy and branding to make a lasting impact, and better reflect their company and cutting edge developer products."
-description:
-  situation_html: <p>Mapbox leverages the largest, most intelligent open source location platform in the world to power many of the apps we use every day. Facebook, Snapcat, Uber, Vice, Bloomberg, and Ocupop all tap into a remarkably adaptable toolset informed by 350 million miles of live road telemetry data fed into it every day.</p>
-    <p>Mapbox recently asked Ocupop to help concept their inaugural user conference at Pier 27 in San Francisco. With the ’Locate’ name already in place, Mapbox needed an entirely new message strategy, branding package, and experience design to ensure the event was well received, and even better attended, by the world’s mapping elite.</p>
-  solution_html: <p>Working on a tight timeline and at a remarkable scale, Ocupop designed the ‘Locate’ visual system to celebrate Mapbox’s authentic position at the leading edge of location data and the passionate community that joins them there. </p>
-  results_html:
+summary: 'Mapbox needed a new message strategy and branding to make a lasting impact, and better reflect their company and cutting edge developer products.'
 gallery:
   - image:
-    caption:
-videos:
-  - title:
-    url:
     caption:
 tags:
   - design
@@ -25,3 +14,16 @@ tags:
   - events
 ---
 
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <p>Mapbox leverages the largest, most intelligent open source location platform in the world to power many of the apps we use every day. Facebook, Snapcat, Uber, Vice, Bloomberg, and Ocupop all tap into a remarkably adaptable toolset informed by 350 million miles of live road telemetry data fed into it every day.</p>
+          <p>Mapbox recently asked Ocupop to help concept their inaugural user conference at Pier 27 in San Francisco. With the ’Locate’ name already in place, Mapbox needed an entirely new message strategy, branding package, and experience design to ensure the event was well received, and even better attended, by the world’s mapping elite.</p>
+          <p>Working on a tight timeline and at a remarkable scale, Ocupop designed the ‘Locate’ visual system to celebrate Mapbox’s authentic position at the leading edge of location data and the passionate community that joins them there. </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
